fix events spacing

--- a/src/scss/_call-to-action.scss
+++ b/src/scss/_call-to-action.scss
@@ -43,7 +43,7 @@
   padding: 8px 25px 10px 25px;
   font-weight: 600;
   letter-spacing: 1px;
-  border: 2px solid black;
+  border: 2px solid $secondary;
   color: #000;
   background-color: $secondary;
 ;
