--- a/src/scss/_events.scss
+++ b/src/scss/_events.scss
@@ -11,6 +11,9 @@
   border: 3px solid #000;
   transition: all ease-in-out 0.3s;
   background: #fff;
+  border-radius: 8px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .services .icon-box .grade-badge {
@@ -59,9 +62,16 @@
 }
 
 .services .icon-box .fa-ul {
-  padding: 5px 15px 0px 5px;
-  line-height: 30px;
+  padding: 5px 10px 10px 45px;
+  line-height: 1.5;
   font-size: 16px;
-  margin-bottom: 0px;
+  margin: 0px;
   list-style-position: outside;
+}
+
+
+.services .icon-box .fa-ul li {
+  line-height: 1.4;
+  padding: 10px 0px 5px 8px;
+  
 }
