--- a/src/scss/_features-icons.scss
+++ b/src/scss/_features-icons.scss
@@ -100,7 +100,7 @@
   letter-spacing: 0.55px;
   font-size: 18px;
   line-height: 1.5;
-  border: 2px solid black;
+  border: 2px solid $secondary;
   color: $black;
   background: $secondary;
   position: relative;
