--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -121,7 +121,7 @@ section {
   margin-left: 20px;
   font-weight: 700;
   letter-spacing: 1px;
-  border: 2px solid black;
+  border: 2px solid $secondary;
   border-radius: 8px;
   padding: 8px 25px 10px 25px;
   white-space: nowrap;
